@@ -10,6 +10,8 @@ Improvements
 - dnssec validation failures contain more verbose reasoning (!735)
 - new function trust_anchors.summary() describes state of DNSSEC TAs (!737),
   and logs new state of trust anchors after start up and automatic changes
+- trust anchors: refuse revoked DNSKEY even if specified explicitly,
+  and downgrade missing the SEP bit to a warning
 
 
 Knot Resolver 3.2.0 (2018-12-17)
